<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_dialog_new_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_new_location_summary" />

    <EditText
        android:id="@+id/text_dialog_name"
        android:hint="@string/dialog_new_loc_name_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_dialog_lat"
        android:hint="@string/dialog_new_loc_lat_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_dialog_long"
        android:hint="@string/dialog_new_loc_long_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_save"
        android:id="@+id/buttonDialogSave" />

</LinearLayout>