<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AddFoodActivity">

    <!-- Toolbar -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/viewAddFood">

        <android.support.v7.widget.Toolbar
            android:title="@string/app_name"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <!-- Search box -->
            <LinearLayout
                android:id="@+id/search_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_view"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#b3ffffff" />

                <ImageView
                    android:id="@+id/search_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:src="@drawable/ic_close_white_24dp"
                    android:contentDescription="@string/search_icon_desc" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!--<include layout="@layout/content_add_food" />-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:hint="@string/add_food_name"
        android:layout_below="@+id/viewAddFood"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextExpiration"
        android:hint="@string/add_food_expiration"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_expiration_notify"
        android:id="@+id/checkBoxNotifyExpiration"
        android:layout_below="@+id/editTextExpiration"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_nearby_location"
        android:id="@+id/checkBoxLocationNotify"
        android:layout_below="@+id/spinnerNotifyPeriod"
        android:layout_alignStart="@+id/radioStorage"
        android:layout_marginTop="15dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerNotifyPeriod"
        android:spinnerMode="dialog"
        android:prompt="@string/add_food_advance_notify"
        android:elevation="4dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/add_food_notify_times"
        android:layout_below="@+id/checkBoxNotifyExpiration"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerType"
        android:spinnerMode="dropdown"
        android:entries="@array/add_food_types"
        android:elevation="4dp"
        android:layout_below="@+id/checkBoxLocationNotify"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/radioStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textViewStorageType"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonFrozen"
            android:text="@string/option_frozen"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_refrigerated"
            android:id="@+id/radioButtonRefrig"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_room_temp"
            android:id="@+id/radioButtonNeither"
            android:layout_weight="1" />
    </RadioGroup>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_save_white_24dp"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_type_title"
        android:id="@+id/textViewStorageType"
        android:layout_below="@+id/spinnerType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>
