<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.FoodDetailsActivity"
    tools:showIn="@layout/activity_food_details">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_refrigerated"
        android:id="@+id/refridgeratedLabel"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lasts_for"
        android:id="@+id/refridgeratedLastsFor"
        android:layout_below="@+id/refridgeratedLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refridgeratedPeriod"
        android:layout_below="@+id/refridgeratedLabel"
        android:layout_toEndOf="@+id/refridgeratedLastsFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_frozen"
        android:id="@+id/frozenLabel"
        android:layout_below="@+id/refridgeratedLastsFor"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lasts_for"
        android:id="@+id/frozenLastsFor"
        android:layout_below="@+id/frozenLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frozenPeriod"
        android:layout_alignTop="@+id/frozenLastsFor"
        android:layout_toEndOf="@+id/frozenLastsFor" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_room_temp"
        android:id="@+id/roomTLabel"
        android:layout_below="@+id/frozenLastsFor"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lasts_for"
        android:id="@+id/roomTLastsFor"
        android:layout_below="@+id/roomTLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roomTPeriod"
        android:layout_alignTop="@+id/roomTLastsFor"
        android:layout_toEndOf="@+id/roomTLastsFor" />

</RelativeLayout>
